--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ target_include_directories(midikraft-yamaha-refacedx PUBLIC ${CMAKE_CURRENT_LIST
 if(WIN32)
 	target_link_directories(midikraft-yamaha-refacedx PUBLIC "${icu_SOURCE_DIR}/lib64")
 endif()
-target_link_libraries(midikraft-yamaha-refacedx juce-utils midikraft-base)
+target_link_libraries(midikraft-yamaha-refacedx juce-utils midikraft-base ${APPLE_BOOST})
 
 # Pedantic about warnings
 if (MSVC)
